workshop03/cs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ing
  labels:
    name: cs-ing
    app: codeserver
  namespace: cs
  annotations: 
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  rules:
  - host: cs-146.190.195.82.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-svc
            port:
              number: 8443
