workshop03/oauth2-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ing
  labels:
    name: oauth-ing
    app: codeserver
  namespace: cs
spec:
  ingressClassName: nginx
  rules:
  - host: cs-146.190.195.82.nip.io
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-svc
            port:
              number: 4180
